--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,36 @@
 /* パソコン用 */
 @media screen and (min-width: 769px) {
+  .br-sp {display: none; }
   header {
     text-align: center;
     font-family: 'Noto Serif JP', serif;
     font-weight: bold;
+  }
+  .header-text {
+    background-color: #f1f3f4;
+    margin-left: 100px;
+    margin-right: 100px;
+    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
+  }
+  body {
+    font-family: "Noto Serif JP",Helvetica,serif;
+  }
+  h1{
+    font-family: 'M PLUS 1p','ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, 'ＭＳ Ｐゴシック', sans-serif;
+  }
+  h3{
+    background-color: #2196d2;
+    color: white;
+    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
+    text-align: center;
+  }
+  h4{
+    background-color: #00a5dd;
+    color: white;
+    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
+  }
+  h5{
+    background-color: #d4dbde;
   }
   .sonic img{
     width: 50%;
@@ -11,20 +38,80 @@
   .fish img{
     width: 40%;
   }
+  .btn img{
+    width: 40%;
+  }
+  .btn01{
+    margin-top: 50px;
+    margin-bottom: 70px;
+    text-align: center;
+  }
+  footer {
+    margin-top: 50px;
+    text-align: center;
+  }
+  footer h4{
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+  footer h5{
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+  .award img{
+    width: 8%;
+  }
+  .footer-at{
+    color: #24607e;
+    font-size: 80%;
+    font-weight: 500;
+  }
+  .main-content{
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+  .main-content p{
+    margin-left: 50px;
+  }
 }
 
 /* タブレット用 */
 @media only screen and (min-width: 641px) and (max-width: 960px) {
+  .br-pc {display: none; }
   header {
     text-align: center;
     font-family: 'Noto Serif JP', serif;
     font-weight: bold;
   }
+  .header-text {
+    background-color: #f1f3f4;
+    margin-left: 70px;
+    margin-right: 70px;
+    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
+  }
+  body{
+      font-family: "Noto Serif JP",Helvetica,serif;
+  }
   h1{
-    font-size: 25px;
+    font-size: 30px;
+    font-family: 'M PLUS 1p','ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, 'ＭＳ Ｐゴシック', sans-serif;
   }
   h2{
-    font-size: 20px;
+    font-size: 25px;
+  }
+  h3{
+    background-color: #2196d2;
+    color: white;
+    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
+    text-align: center;
+  }
+  h4{
+    background-color: #00a5dd;
+    color: white;
+    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
+  }
+  h5{
+    background-color: #d4dbde;
   }
   .sonic img{
     width: 60%;
@@ -35,20 +122,78 @@
   p{
     font-size: 17px;
   }
+  .btn01{
+    margin-top: 50px;
+    margin-bottom: 70px;
+    text-align: center;
+  }
+  .btn img{
+    width: 60%;
+  }
+  footer {
+    text-align: center;
+  }
+  footer h4{
+    margin-left: 70px;
+    margin-right: 70px;
+  }
+  footer h5{
+    margin-left: 70px;
+    margin-right: 70px;
+  }
+  .award img{
+    width: 20%;
+  }
+  .footer-at{
+    color: #24607e;
+    font-size: 70%;
+    font-weight: 500;
+  }
+  .main-content{
+    margin-left: 80px;
+    margin-right: 80px;
+  }
+  .main-content p{
+    margin-left: 30px;
+  }
 }
 
 /* スマートフォン用 */
 @media screen and (max-width: 640px) {
+  .br-pc {display: none; }
   header {
     text-align: center;
     font-family: 'Noto Serif JP', serif;
     font-weight: bold;
   }
+  .header-text {
+    background-color: #f1f3f4;
+    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
+  }
+  body{
+      font-family: "Noto Serif JP",Helvetica,serif;
+  }
   h1{
     font-size: 20px;
+    font-family: 'M PLUS 1p','ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, 'ＭＳ Ｐゴシック', sans-serif;
   }
   h2{
     font-size: 16px;
+  }
+  h3{
+    font-size: 15px;
+    color: white;
+    background-color: #2196d2;
+    text-align: center;
+  }
+  h4{
+    background-color: #00a5dd;
+    color: white;
+    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
+  }
+  h5{
+    font-size: 14px;
+    background-color: #d4dbde;
   }
   p{
     font-size: 12px;
@@ -58,5 +203,24 @@
   }
   .fish img{
     width: 90%;
+  }
+  .btn01{
+    margin-top: 50px;
+    margin-bottom: 70px;
+    text-align: center;
+  }
+  .btn img{
+    width: 70%;
+  }
+  footer {
+    text-align: center;
+  }
+  .award img{
+    width: 20%;
+  }
+  .footer-at{
+    color: #24607e;
+    font-size: 60%;
+    font-weight: 500;
   }
 }
