--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
     font-weight: bold;
   }
   .header-text {
-    background-color: white;
+    /*background-color: white;*/
     margin-left: 100px;
     margin-right: 100px;
     filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
@@ -15,7 +15,7 @@
   }
   body {
     font-family: "Noto Serif JP",Helvetica,serif;
-    background-image: url("../assets/img/back.png");
+    background-image: url("../assets/img/back1.jpg");
     background-size: cover;
   }
   h1{
@@ -26,18 +26,9 @@
     font-size: 30px;
   }
   h3{
-    background-color: #2196d2;
-    color: white;
+    /*background-color: #2196d2;*/
     filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
     text-align: center;
-  }
-  h4{
-    background-color: #00a5dd;
-    color: white;
-    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
-  }
-  h5{
-    background-color: #d4dbde;
   }
   .sonic img{
     width: 50%;
@@ -53,7 +44,7 @@
   .main-content{
     margin-left: 100px;
     margin-right: 100px;
-    background-color: white;
+    /*background-color: white;*/
   }
   .main-content p{
     margin-left: 50px;
@@ -69,7 +60,7 @@
     font-weight: bold;
   }
   .header-text {
-    background-color: white;
+    /*background-color: white;*/
     margin-left: 70px;
     margin-right: 70px;
     filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
@@ -77,7 +68,7 @@
   }
   body{
       font-family: "Noto Serif JP",Helvetica,serif;
-      background-image: url("../assets/img/back.png");
+      background-image: url("../assets/img/back1.jpg");
       background-size: cover;
   }
   h1{
@@ -89,19 +80,11 @@
     font-family: 'M PLUS 1p','ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, 'ＭＳ Ｐゴシック', sans-serif;
   }
   h3{
-    background-color: #2196d2;
-    color: white;
+    /*background-color: #2196d2;*/
     filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
     text-align: center;
   }
-  h4{
-    background-color: #00a5dd;
-    color: white;
-    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
-  }
-  h5{
-    background-color: #d4dbde;
-  }
+
   .sonic img{
     width: 60%;
   }
@@ -119,7 +102,7 @@
   .main-content{
     margin-left: 80px;
     margin-right: 80px;
-    background-color: white;
+    /*background-color: white;*/
   }
   .main-content p{
     margin-left: 30px;
@@ -135,12 +118,12 @@
     font-weight: bold;
   }
   .header-text {
-    background-color: white;
+    /*background-color: white;*/
     filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
   }
   body{
       font-family: "Noto Serif JP",Helvetica,serif;
-      background-image: url("../assets/img/back.png");
+      background-image: url("../assets/img/back1.jpg");
       background-size: cover;
   }
   h1{
@@ -153,25 +136,15 @@
   }
   h3{
     font-size: 15px;
-    color: white;
-    background-color: #2196d2;
+    /*background-color: #2196d2;*/
     text-align: center;
-  }
-  h4{
-    background-color: #00a5dd;
-    color: white;
-    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
-  }
-  h5{
-    font-size: 14px;
-    background-color: #d4dbde;
   }
   p{
     font-size: 13px;
   }
-  .main-content {
+  /*.main-content {
     background-color: white;
-  }
+  }*/
   .sonic img{
     width: 90%;
   }
