--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,8 @@
   body {
     font-family: "Noto Serif JP",Helvetica,serif;
     background-image: url("../assets/img/back1.jpg");
-    background-size: contain;
+    background-size: cover;
+    background-attachment: fixed;
   }
   h1{
     font-family: 'M PLUS 1p','ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, 'ＭＳ Ｐゴシック', sans-serif;
@@ -70,6 +71,7 @@
       font-family: "Noto Serif JP",Helvetica,serif;
       background-image: url("../assets/img/back1.jpg");
       background-size: cover;
+      background-attachment: fixed;
   }
   h1{
     font-size: 30px;
@@ -125,6 +127,7 @@
       font-family: "Noto Serif JP",Helvetica,serif;
       background-image: url("../assets/img/back1.jpg");
       background-size: cover;
+      background-attachment: fixed;
   }
   h1{
     font-size: 20px;
