--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,12 @@
     font-weight: bold;
   }
   .header-text {
-    /*background-color: white;*/
     margin-left: 100px;
     margin-right: 100px;
     filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
     font-size: 23px;
+    background-image: url("../assets/img/sonic-back.jpg");
+    background-size: cover;
   }
   body {
     font-family: "Noto Serif JP",Helvetica,serif;
@@ -27,7 +28,7 @@
     font-size: 30px;
   }
   h3{
-    /*background-color: #2196d2;*/
+    font-size: 20px;
     filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
     text-align: center;
   }
@@ -43,12 +44,18 @@
     text-align: center;
   }
   .main-content{
+    margin-top: 50px;
     margin-left: 100px;
     margin-right: 100px;
-    /*background-color: white;*/
+    padding: 20px.10px;
+    background-image: url("../assets/img/sonic-back2.jpg");
+    background-size: cover;
   }
   .main-content p{
-    margin-left: 50px;
+    margin-left: 100px;
+    margin-right: 90px;
+    font-size: 18px;
+    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
   }
 }
 
@@ -61,11 +68,12 @@
     font-weight: bold;
   }
   .header-text {
-    /*background-color: white;*/
     margin-left: 70px;
     margin-right: 70px;
     filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
     font-size: 23px;
+    background-image: url("../assets/img/sonic-back.jpg");
+    background-size: cover;
   }
   body{
       font-family: "Noto Serif JP",Helvetica,serif;
@@ -82,7 +90,6 @@
     font-family: 'M PLUS 1p','ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, 'ＭＳ Ｐゴシック', sans-serif;
   }
   h3{
-    /*background-color: #2196d2;*/
     filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
     text-align: center;
   }
@@ -104,10 +111,13 @@
   .main-content{
     margin-left: 80px;
     margin-right: 80px;
-    /*background-color: white;*/
+    padding: 20px.10px;
+    background-image: url("../assets/img/sonic-back2.jpg");
+    background-size: cover;
   }
   .main-content p{
-    margin-left: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 }
 
@@ -120,8 +130,9 @@
     font-weight: bold;
   }
   .header-text {
-    /*background-color: white;*/
     filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
+    background-image: url("../assets/img/sonic-back.jpg");
+    background-size: cover;
   }
   body{
       font-family: "Noto Serif JP",Helvetica,serif;
@@ -139,15 +150,16 @@
   }
   h3{
     font-size: 15px;
-    /*background-color: #2196d2;*/
     text-align: center;
   }
   p{
     font-size: 13px;
   }
-  /*.main-content {
-    background-color: white;
-  }*/
+  .main-content{
+    background-image: url("../assets/img/sonic-back2.jpg");
+    background-size: cover;
+    padding: 10px.1px;
+  }
   .sonic img{
     width: 90%;
   }
